# cbindgen-alloc-demo

./: Cargo.toml  README.md  main.c
src/: lib.rs
